# RelentlessD12

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  GenerateProjects.bat  LICENSE  README.md  build-and-run.bat  imgui.ini
Relentless/: CMakeLists.txt  EntryPoint.h  Relentless.h  engine.ini  imgui.ini
Relentless-Editor/: Assets.rasset  CMakeLists.txt  imgui.ini
Relentless-Editor/Assets/: hey.rmat  hey.rmat.rasset
Relentless-Editor/Assets/Environments/: CitrusOrchardRoadEnvironment.rasset  OvercastSoilEnvironment.rasset
Relentless-Editor/Assets/Materials/: M_CoolMaterial.rasset  M_DefaultWhite.rasset
Relentless-Editor/Assets/Models/: Capsule.rasset  Capsule.rbulk  Cone.rasset  Cone.rbulk  Cube.rasset  Cube.rbulk  Cylinder.rasset  Cylinder.rbulk  Icosphere.rasset  Icosphere.rbulk  Plane.rasset  Plane.rbulk  Quad.rasset  Quad.rbulk  Sphere.rasset  Sphere.rbulk  Torus.rasset  Torus.rbulk  Triangle.rasset  Triangle.rbulk  UtahTeapot.rasset  UtahTeapot.rbulk
Relentless-Editor/Assets/Scenes/: Example.Relentless
Relentless-Editor/Assets/Textures/: citrus_orchard_road_puresky_2k.rasset  none_thumbnail.rasset  none_thumbnail.rbulk  overcast_soil_puresky_2k.rasset  quattro_canti_2k.rasset
Relentless-Editor/src/: EditorLayer.cpp  EditorLayer.h  RelentlessEditorApp.cpp
Relentless-Editor/src/Assets/: ImportSettings.h
Relentless-Editor/src/Controller/: PerspectiveCameraController.cpp  PerspectiveCameraController.h  TransformGizmoController.cpp  TransformGizmoController.h
Relentless-Editor/src/Core/: Editor.cpp  Editor.h  EditorGrid.cpp  EditorGrid.h  EditorLayer.cpp  EditorLayer.h  EntityFilters.cpp  EntityFilters.h  EntityFolders.cpp  EntityFolders.h  EntryPoint.cpp  RelentlessEditorApp.cpp  RelentlessEditorApp.h  Selection.cpp  Selection.h
Relentless-Editor/src/Details/: DetailCustomizationRegistry.cpp  DetailCustomizationRegistry.h
Relentless-Editor/src/ECS/: EntityComponentDefinition.cpp  EntityComponentDefinition.h
Relentless-Editor/src/Event/: EditorEvents.h
Relentless-Editor/src/ImGui/: ImGuiFonts.cpp  ImGuiFonts.h  ImGuiIncludes.h  ImGuiLayer.cpp  ImGuiLayer.h
Relentless-Editor/src/Module/: AssetToolsModule.cpp  AssetToolsModule.h  ContentBrowserModule.cpp  ContentBrowserModule.h  DetailsModule.cpp  DetailsModule.h  UIModule.cpp  UIModule.h
Relentless-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ContentBrowserPanelEx.cpp  ContentBrowserPanelEx.h  DetailsPanel.cpp  DetailsPanel.h  EditorViewportPanel.cpp  EditorViewportPanel.h  EntityDetailsPanel.cpp  EntityDetailsPanel.h  EnvironmentEditorPanel.cpp  EnvironmentEditorPanel.h  EnvironmentViewportPanel.cpp  EnvironmentViewportPanel.h  IEditorPanel.cpp  IEditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  MetricsPanel.cpp  MetricsPanel.h  OutlinerPanel.cpp  OutlinerPanel.h  Panel.cpp  Panel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneRendererPanel.cpp  SceneRendererPanel.h  TestLayoutPanel.cpp  TestLayoutPanel.h  TestPanel.cpp  TestPanel.h  ViewportPanel.cpp  ViewportPanel.h  WidgetShowcasePanel.cpp  WidgetShowcasePanel.h
Relentless-Editor/src/Property/: AssetPropertyHandle.h  EntityPropertyHandle.h  IPropertyHandleBase.h  MultiPropertyHandle.h  PropertyHandle.h
Relentless-Editor/src/Subsystem/: AssetDefinitionRegistry.cpp  AssetDefinitionRegistry.h  AssetImportSubsystem.cpp  AssetImportSubsystem.h  EditorRendererBridgeSubsystem.cpp  EditorRendererBridgeSubsystem.h  EditorSceneBridgeSubsystem.cpp  EditorSceneBridgeSubsystem.h  EditorViewportSubsystem.cpp  EditorViewportSubsystem.h  EngineContentSubsystem.cpp  EngineContentSubsystem.h  EntityComponentDefinitionRegistry.cpp  EntityComponentDefinitionRegistry.h  EntityFoldersSubsystem.cpp  EntityFoldersSubsystem.h  IEditorSubsystem.h  SelectionSubsystem.cpp  SelectionSubsystem.h
Relentless-Editor/src/Thumbnail/: AssetThumbnailData.cpp  AssetThumbnailData.h  AssetThumbnailPool.cpp  AssetThumbnailPool.h
Relentless-Editor/src/UI/: OutlinerTable.cpp  OutlinerTable.h  OutlinerTableData.cpp  OutlinerTableData.h  OutlinerTableDataSelection.cpp  OutlinerTableDataSelection.h  OutlinerTableDataSlice.cpp  OutlinerTableDataSlice.h  OutlinerTableInteraction.cpp  OutlinerTableInteraction.h  OutlinerTableRow.cpp  OutlinerTableRow.h  OutlinerTableStyling.cpp  OutlinerTableStyling.h  OutlinerTreeItem.cpp  OutlinerTreeItem.h
Relentless-Editor/src/UnitTests/: FolderUnitTests.cpp  FolderUnitTests.h
Relentless/Assets/Materials/: Default-Material.rmat  Default-Material.rmat.rmat.rmat  Default-Material.rmat.rmat.rmat.rasset  M_DefaultMaterial.rasset  M_Ground.rasset  M_Ground.rmat.rasset  m_Ground.rmat
Relentless/Assets/Meshes/: Capsule.gltf  Cylinder.gltf  Plane.gltf  Quad.gltf  Sphere.gltf  Triangle.gltf  UtahTeapot.gltf
Relentless/Assets/Scenes/: StarterScene.Relentless
Relentless/Assets/Textures/: Directory.jpg.rasset  Directory.rasset  EnvironmentThumbnail.rasset  EnvironmentThumbnail.rbulk  FileIcon.png.rasset  MaterialThumbnail.jpg.rasset  MaterialThumbnail.rasset  MaterialThumbnail.rbulk  MeshThumbnail.rasset  RLS_LOGO.jpg.rasset  SceneThumbnail.jpg.rasset  SceneThumbnail.rasset  default_thumbnail.rthumb  ibl_brdf_lut.png.rasset  ibl_brdf_lut.rasset  invalidtexture.rasset  meshthumbnail.rasset  pickerwidget.png.rasset
Relentless/src/: Relentless.h  rlspch.h
Relentless/src/Assets/: AssetManager.cpp  AssetManager.h  AssetManagerEx.cpp  AssetManagerEx.h  AssetMeta.cpp  AssetMeta.h  AssetRegistry.cpp  AssetRegistry.h  IAsset.cpp  IAsset.h  ImportSettings.h  Importer.cpp  Importer.h  Serializer.cpp  Serializer.h
Relentless/src/Callback/: Broadcaster.h  Callback.h  CoreBroadcasters.cpp  CoreBroadcasters.h
Relentless/src/Core/: Any.h  Application.cpp  Application.h  Core.h  CoreTypes.h  DLLExport.h  EngineMain.cpp  EngineMain.h  Folder.cpp  Folder.h  IAsset.cpp  IAsset.h  Log.cpp  Log.h  MinWindows.h  Profiler.cpp  Profiler.h  Ref.h  Span.h  StaticTypeInfo.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  (+2 more)
(+897 files in other folders)
